--- a/Backend/src/main/resources/application-prod.properties
+++ b/Backend/src/main/resources/application-prod.properties
@@ -1,124 +1,43 @@
 # ==========================================
-# Production Configuration
+# Server (PROD)
 # ==========================================
-spring.profiles.active=prod
-
-# ==========================================
-# Server Configuration
-# ==========================================
-server.port=8080
 server.servlet.context-path=/api
 server.compression.enabled=true
 server.compression.min-response-size=1024
-server.error.include-stacktrace=never
-server.error.include-binding-errors=never
-server.error.include-message=always
-server.error.include-exception=false
 
 # ==========================================
-# PostgreSQL Database Configuration
+# DataSource (PROD via ENV)
 # ==========================================
-# ? IMPORTANT: ????????????? environment variables
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Connection Pool (HikariCP)
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.auto-commit=true
 
 # ==========================================
-# JPA / Hibernate Configuration
+# JPA / Hibernate (PROD)
 # ==========================================
-spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
-spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ==========================================
-# Flyway Configuration
+# Logging (PROD)
 # ==========================================
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-spring.flyway.out-of-order=false
-spring.flyway.locations=classpath:db/migration
+logging.level.root=WARN
+logging.level.org.springframework=WARN
+logging.level.org.springframework.security=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.springframework.data=WARN
+logging.level.org.hibernate=WARN
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.flywaydb=INFO
+logging.level.com.example.devops=INFO
 
 # ==========================================
-# JWT Configuration
-# ==========================================
-# ? IMPORTANT: APP_JWT_SECRET ????????????? environment variables
-# ?????? Production: ???????? 256-bit (32 bytes) ??? random
-# ?????????: openssl rand -base64 32
-app.jwt.secret=${APP_JWT_SECRET}
-app.jwt.expiration=${APP_JWT_EXPIRATION:86400000}
-
-# ==========================================
-# Jackson Configuration
+# Jackson (PROD)
 # ==========================================
 spring.jackson.time-zone=Asia/Bangkok
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.default-property-inclusion=non_null
-
-# ==========================================
-# Logging Configuration - Production Level
-# ==========================================
-# ? Root logger: WARN (?? debug logs)
-logging.level.root=WARN
-
-# Spring Framework: WARN
-logging.level.org.springframework=WARN
-logging.level.org.springframework.security=WARN
-logging.level.org.springframework.web=WARN
-logging.level.org.springframework.data=WARN
-
-# Application: INFO (important events)
-logging.level.com.example.devops=INFO
-logging.level.com.example.devops.security=INFO
-
-# Database: WARN
-logging.level.org.hibernate=WARN
-logging.level.org.hibernate.SQL=WARN
-
-# Flyway: INFO
-logging.level.org.flywaydb=INFO
-
-# ==========================================
-# Logging Format
-# ==========================================
-# Console logging (simplified for production)
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-
-# File logging (detailed)
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
-
-# ==========================================
-# File Logging Configuration
-# ==========================================
-# ? Log files location
-logging.file.name=/var/log/app/app.log
-logging.file.max-size=50MB
-logging.file.max-history=30
-logging.file.total-size-cap=10GB
-
-# ==========================================
-# Security Configuration
-# ==========================================
-spring.security.filter.order=5
-
-# ==========================================
-# Actuator Configuration (Monitoring)
-# ==========================================
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=when-authorized
-management.metrics.enable.jvm=true
-management.metrics.enable.process=true
-management.metrics.enable.system=true
