--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,21 +18,20 @@ services:
       retries: 12
       start_period: 5s
     volumes:
-      # ❗️ล้าง volume แล้วไฟล์นี้จะรันอัตโนมัติ
       - db_data:/var/lib/postgresql/data
-      - ./Backend/src/main/resources/db/init/butcon_postgres_INIT.sql:/docker-entrypoint-initdb.d/001_init.sql:ro
+    # ไม่ mount initdb.d เพื่อหลีกเลี่ยงชนกับ Flyway
 
   backend:
     build:
       context: ./Backend
     container_name: spring-backend
     environment:
+      SPRING_PROFILES_ACTIVE: dev
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/devopsdb
       SPRING_DATASOURCE_USERNAME: devuser
       SPRING_DATASOURCE_PASSWORD: devpass
       APP_JWT_SECRET: "uFrd1bQp5p9Hn3e3yM3jH0wH6b9Qh2b/8Qy6rH8cJz3pT2g7C1q9m3t4X6y8a1b2c3d4e5f6g7h8i9j0k1l2m3=="
       APP_JWT_EXPIRATION: "86400000"
-      SPRING_FLYWAY_ENABLED: "false"
     depends_on:
       db:
         condition: service_healthy
@@ -67,7 +66,7 @@ services:
     depends_on:
       - db
     volumes:
-      - pgadmin_data:/var/lib/pgadmin
+      - pgadmin_data:/var/lib/pgadmin"
 
 volumes:
   db_data:
