--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -42,3 +42,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 
 # ===== Seeder flag (????????????????????) =====
 app.seed.images=false
+# ===== Actuator (Prometheus Metrics) =====
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoints.web.base-path=/actuator
