--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,13 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U devuser -d devopsdb || exit 1" ]
+      test: ["CMD-SHELL", "pg_isready -U devuser -d devopsdb || exit 1"]
       interval: 5s
       timeout: 5s
       retries: 12
       start_period: 5s
     volumes:
       - db_data:/var/lib/postgresql/data
-    # ไม่ mount initdb.d เพื่อหลีกเลี่ยงชนกับ Flyway
 
   backend:
     build:
@@ -52,7 +51,7 @@ services:
     volumes:
       - ./Frontend:/app
       - /app/node_modules
-    command: [ "npm", "run", "dev", "--", "--host" ]
+    command: ["npm", "run", "dev", "--", "--host"]
 
   pgadmin:
     image: dpage/pgadmin4
@@ -66,8 +65,70 @@ services:
     depends_on:
       - db
     volumes:
-      - pgadmin_data:/var/lib/pgadmin"
+      - pgadmin_data:/var/lib/pgadmin
+
+  # ================================
+  # Loki (Log Storage)
+  # ================================
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    user: "0"  # run as root เพื่อให้เขียน /loki/chunks ได้
+    command: -config.file=/etc/loki/local-config.yaml
+    ports:
+      - "3100:3100"
+    volumes:
+      - loki_data:/loki
+    restart: always
+
+  # ================================
+  # Promtail (Log Collector)
+  # ================================
+  promtail:
+    image: grafana/promtail:latest
+    container_name: promtail
+    command: -config.file=/etc/promtail/config.yml
+    volumes:
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/log:/var/log:ro
+      - ./promtail-config.yml:/etc/promtail/config.yml
+    depends_on:
+      - loki
+
+  # ================================
+  # Prometheus (Metrics)
+  # ================================
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: always
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - backend
+
+  # ================================
+  # Grafana (Dashboard)
+  # ================================
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: always
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin123
+    depends_on:
+      - loki
+      - prometheus
+    volumes:
+      - grafana_data:/var/lib/grafana
 
 volumes:
   db_data:
   pgadmin_data:
+  loki_data:
+  grafana_data:
