--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,10 +7,6 @@ on:
     branches: [ k8s ]
   workflow_dispatch:
 
-env:
-  BACKEND_IMAGE_NAME: 1tsh4dowz/devops-backend
-  FRONTEND_IMAGE_NAME: 1tsh4dowz/devops-frontend
-
 jobs:
   # =========================
   # Backend Unit Tests
@@ -66,7 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ backend-test ]
     env:
-      IMAGE_NAME: ${{ env.BACKEND_IMAGE_NAME }}
+      IMAGE_NAME: 1tsh4dowz/devops-backend
     steps:
       - uses: actions/checkout@v4
 
@@ -92,7 +88,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ frontend-test ]
     env:
-      IMAGE_NAME: ${{ env.FRONTEND_IMAGE_NAME }}
+      IMAGE_NAME: 1tsh4dowz/devops-frontend
     steps:
       - uses: actions/checkout@v4
 
@@ -118,8 +114,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ docker-backend, docker-frontend ]
     env:
-      BACKEND_IMAGE: ${{ env.BACKEND_IMAGE_NAME }}:latest
-      FRONTEND_IMAGE: ${{ env.FRONTEND_IMAGE_NAME }}:latest
+      BACKEND_IMAGE: 1tsh4dowz/devops-backend:latest
+      FRONTEND_IMAGE: 1tsh4dowz/devops-frontend:latest
 
     steps:
       - uses: actions/checkout@v4
