--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -42,3 +42,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 
 # ===== Seeder flag (????????????????????) =====
 app.seed.images=false
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
