--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,7 +50,7 @@ jobs:
           cache: "npm"
           cache-dependency-path: Frontend/package-lock.json
 
-      - name: Install & Test Frontend
+      - name: Install & Test Frontend (Vitest)
         run: |
           npm ci
           npm run test --if-present
@@ -61,8 +61,6 @@ jobs:
   docker-backend:
     runs-on: ubuntu-latest
     needs: [ backend-test ]
-    env:
-      IMAGE_NAME: 1tsh4dowz/devops-backend
     steps:
       - uses: actions/checkout@v4
 
@@ -78,8 +76,8 @@ jobs:
           context: ./Backend
           push: true
           tags: |
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
-            ${{ env.IMAGE_NAME }}:latest
+            1tsh4dowz/devops-backend:${{ github.sha }}
+            1tsh4dowz/devops-backend:latest
 
   # =========================
   # Build & Push Frontend Image
@@ -87,8 +85,6 @@ jobs:
   docker-frontend:
     runs-on: ubuntu-latest
     needs: [ frontend-test ]
-    env:
-      IMAGE_NAME: 1tsh4dowz/devops-frontend
     steps:
       - uses: actions/checkout@v4
 
@@ -104,11 +100,12 @@ jobs:
           context: ./Frontend
           push: true
           tags: |
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
-            ${{ env.IMAGE_NAME }}:latest
+            1tsh4dowz/devops-frontend:${{ github.sha }}
+            1tsh4dowz/devops-frontend:latest
 
   # =========================
   # E2E via Cypress + docker compose
+  # ใช้ docker-compose.yml เดิม + Flyway seed + R__butcon_seed_data.sql
   # =========================
   e2e:
     runs-on: ubuntu-latest
@@ -120,6 +117,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # ใช้ docker-compose.yml เดิม แล้ว override แค่ image / env / volumes
       - name: Create docker-compose.override.yml
         run: |
           cat > docker-compose.override.yml << EOF
@@ -128,6 +126,7 @@ jobs:
               image: ${BACKEND_IMAGE}
               ports:
                 - "8080:8080"
+              # ใช้ environment เดิมจาก docker-compose.yml (SPRING_PROFILES_ACTIVE=dev, DB_*)
 
             frontend:
               image: ${FRONTEND_IMAGE}
@@ -135,22 +134,24 @@ jobs:
                 - "5173:5173"
               environment:
                 - VITE_API_URL=http://backend:8080
+              # ล้าง volumes ทิ้งกันปัญหา root เขียน node_modules ใน workspace
+              volumes: []
           EOF
 
-      - name: Start services
+      - name: Start services (db + backend + frontend + pgadmin)
         run: docker compose up -d
 
-      - name: Wait for backend (8080)
+      - name: Wait for backend (8080 /actuator/health)
         run: |
           for i in {1..60}; do
             if curl -fsS http://localhost:8080/actuator/health > /dev/null; then
-              echo "Backend OK"
+              echo "Backend is healthy ✅"
               exit 0
             fi
             echo "Waiting for backend..."
             sleep 2
           done
-          echo "Backend did not become healthy ❌" >&2
+          echo "Backend did not become healthy in time ❌" >&2
           docker compose logs backend || true
           exit 1
 
@@ -158,13 +159,13 @@ jobs:
         run: |
           for i in {1..60}; do
             if curl -fsS http://localhost:5173 > /dev/null; then
-              echo "Frontend OK"
+              echo "Frontend is responding ✅"
               exit 0
             fi
             echo "Waiting for frontend..."
             sleep 2
           done
-          echo "Frontend did not become ready ❌" >&2
+          echo "Frontend did not become ready in time ❌" >&2
           docker compose logs frontend || true
           exit 1
 
@@ -172,22 +173,23 @@ jobs:
         with:
           node-version: 20
 
-      # 👇 FIX PERMISSION ERROR (EACCES)
+      # กันปัญหา EACCES ตอน npm ci (เผื่อมีไฟล์จาก container มาเขียนทับ)
       - name: Fix permissions for Frontend folder
         working-directory: Frontend
         run: sudo chown -R $USER:$USER .
 
-      - name: Install Cypress
+      - name: Install Cypress (CI)
         working-directory: Frontend
+        env:
+          CYPRESS_INSTALL_BINARY: 0
         run: |
           npm ci
           npx cypress install
 
-      - name: Run Cypress
+      - name: Run Cypress (run all specs)
         working-directory: Frontend
         run: npx cypress run --headless
 
-      # 👇 ไม่ให้ error ถ้าไม่มีไฟล์ screenshots/videos
       - name: Upload E2E Artifacts
         if: always()
         uses: actions/upload-artifact@v4
