--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,12 +106,12 @@ jobs:
             1tsh4dowz/devops-frontend:latest
 
   # =========================
-  # E2E + Cypress (ไม่ทำให้ทั้ง workflow fail)
+  # E2E + Cypress (ยังรันแต่ไม่ทำให้ workflow fail)
   # =========================
   e2e:
     runs-on: ubuntu-latest
     needs: [ docker-backend, docker-frontend ]
-    continue-on-error: true   # 👈 ให้ job นี้แดงได้ แต่ workflow รวมยังเขียว
+    continue-on-error: true   # 👈 job นี้แดงได้ แต่ workflow รวมยังเขียว
     env:
       BACKEND_IMAGE: 1tsh4dowz/devops-backend:latest
       FRONTEND_IMAGE: 1tsh4dowz/devops-frontend:latest
