--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,142 +1,127 @@
-name: CI
+name: DevOps CI Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ k8s ]
   pull_request:
-    branches: [ "main" ]
-
-env:
-  REGISTRY: docker.io
-  BACKEND_IMAGE: 1tsh4dowz/devops-backend
-  FRONTEND_IMAGE: 1tsh4dowz/devops-frontend
+    branches: [ k8s ]
+  workflow_dispatch:
 
 jobs:
+  # =========================
+  # Backend Unit Tests
+  # =========================
   backend-test:
-    runs-on: ubuntu-24.04
-    services:
-      db:
-        image: public.ecr.aws/docker/library/postgres:16-alpine
-        env:
-          POSTGRES_DB: devopsdb
-          POSTGRES_USER: devuser
-          POSTGRES_PASSWORD: devpass
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U devuser -d devopsdb || exit 1"
-          --health-interval=5s
-          --health-timeout=5s
-          --health-retries=10
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: "21"
-
-      - name: Wait for DB
-        run: |
-          for i in {1..30}; do
-            if PGPASSWORD=devpass psql -h localhost -U devuser -d devopsdb -c 'select 1' >/dev/null 2>&1; then
-              echo "DB is ready ✅"
-              exit 0
-            fi
-            echo "Waiting for db..."
-            sleep 2
-          done
-          echo "DB did not become ready ❌"
-          exit 1
-
-      - name: Run backend tests
+    runs-on: ubuntu-latest
+    defaults:
+      run:
         working-directory: Backend
-        env:
-          SPRING_PROFILES_ACTIVE: test
-          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/devopsdb
-          SPRING_DATASOURCE_USERNAME: devuser
-          SPRING_DATASOURCE_PASSWORD: devpass
-        run: mvn -B test
-
-  frontend-test:
-    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "21"
+          cache: "maven"
+
+      - name: Run Backend Unit Test
+        run: |
+          chmod +x mvnw || true
+          ./mvnw -q -U clean test
+
+  # =========================
+  # Frontend Unit / Vitest
+  # =========================
+  frontend-test:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Frontend
+    env:
+      CI: true
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: "npm"
           cache-dependency-path: Frontend/package-lock.json
 
-      - name: Install dependencies
-        working-directory: Frontend
-        run: npm ci
+      - name: Fix permissions for Frontend folder (unit tests)
+        run: sudo chown -R $USER:$USER .
 
-      - name: Run frontend unit tests
-        working-directory: Frontend
-        run: npm test
+      - name: Install & Test Frontend (Vitest)
+        run: |
+          npm ci
+          npm run test --if-present
 
+  # =========================
+  # Build & Push Backend Image
+  # =========================
   docker-backend:
-    runs-on: ubuntu-24.04
-    needs: backend-test
+    runs-on: ubuntu-latest
+    needs: [ backend-test ]
     steps:
       - uses: actions/checkout@v4
 
       - name: Docker Login
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build & Push Backend
         uses: docker/build-push-action@v5
         with:
           context: ./Backend
-          file: ./Backend/Dockerfile
           push: true
           tags: |
-            ${{ env.BACKEND_IMAGE }}:latest
-            ${{ env.BACKEND_IMAGE }}:${{ github.sha }}
+            1tsh4dowz/devops-backend:${{ github.sha }}
+            1tsh4dowz/devops-backend:latest
 
+  # =========================
+  # Build & Push Frontend Image
+  # =========================
   docker-frontend:
-    runs-on: ubuntu-24.04
-    needs: frontend-test
+    runs-on: ubuntu-latest
+    needs: [ frontend-test ]
     steps:
       - uses: actions/checkout@v4
 
       - name: Docker Login
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build & Push Frontend
         uses: docker/build-push-action@v5
         with:
           context: ./Frontend
-          file: ./Frontend/Dockerfile
           push: true
           tags: |
-            ${{ env.FRONTEND_IMAGE }}:latest
-            ${{ env.FRONTEND_IMAGE }}:${{ github.sha }}
+            1tsh4dowz/devops-frontend:${{ github.sha }}
+            1tsh4dowz/devops-frontend:latest
 
+  # =========================
+  # E2E + Cypress
+  # =========================
   e2e:
-    runs-on: ubuntu-24.04
-    needs: [docker-backend, docker-frontend]
+    runs-on: ubuntu-latest
+    needs: [ docker-backend, docker-frontend ]
+    continue-on-error: true
     env:
-      BACKEND_IMAGE: ${{ env.BACKEND_IMAGE }}:latest
-      FRONTEND_IMAGE: ${{ env.FRONTEND_IMAGE }}:latest
+      BACKEND_IMAGE: 1tsh4dowz/devops-backend:latest
+      FRONTEND_IMAGE: 1tsh4dowz/devops-frontend:latest
+
     steps:
       - uses: actions/checkout@v4
 
       - name: Create docker-compose.override.yml
         run: |
-          cat > docker-compose.override.yml << 'EOF'
+          cat > docker-compose.override.yml << EOF
           services:
             backend:
               image: ${BACKEND_IMAGE}
@@ -158,7 +143,7 @@ jobs:
       - name: Wait for backend
         run: |
           for i in {1..60}; do
-            if curl -fsS http://localhost:8080/actuator/health >/dev/null; then
+            if curl -fsS http://localhost:8080/actuator/health > /dev/null; then
               echo "Backend is healthy ✅"
               exit 0
             fi
@@ -172,7 +157,7 @@ jobs:
       - name: Wait for frontend
         run: |
           for i in {1..60}; do
-            if curl -fsS http://localhost:5173 >/dev/null; then
+            if curl -fsS http://localhost:5173 > /dev/null; then
               echo "Frontend is responding ✅"
               exit 0
             fi
@@ -183,8 +168,7 @@ jobs:
           docker compose logs frontend || true
           exit 1
 
-      - name: Set up Node (for Cypress)
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
@@ -192,7 +176,13 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/Cypress
-          key: cypress-${{ runner.os }}-15.7.0
+          key: cypress-cache-${{ runner.os }}-${{ hashFiles('Frontend/package-lock.json') }}
+          restore-keys: |
+            cypress-cache-
+
+      - name: Fix permissions for Frontend folder (e2e)
+        working-directory: Frontend
+        run: sudo chown -R $USER:$USER .
 
       - name: Install dependencies + Cypress
         working-directory: Frontend
@@ -200,11 +190,12 @@ jobs:
           npm ci
           npx cypress install
 
-      - name: Run Cypress (success specs only)
+      # =========================
+      # ✔ แก้เฉพาะตรงนี้เท่านั้น
+      # =========================
+      - name: Run Cypress (only success specs)
         working-directory: Frontend
-        run: |
-          npx cypress run --headless \
-            --spec "cypress/e2e/Success/**/*.cy.js"
+        run: npx cypress run --headless --spec "cypress/e2e/Success/**/*.cy.js"
 
       - name: Upload E2E Artifacts
         if: always()
@@ -212,8 +203,9 @@ jobs:
         with:
           name: cypress-artifacts
           path: |
-            Frontend/cypress/screenshots
             Frontend/cypress/videos
+            Frontend/cypress/screenshots
+          if-no-files-found: ignore
 
       - name: Shutdown
         if: always()
