--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,12 +106,12 @@ jobs:
             1tsh4dowz/devops-frontend:latest
 
   # =========================
-  # E2E + Cypress (ยังรันแต่ไม่ทำให้ workflow fail)
+  # E2E + Cypress (ไม่ fail workflow)
   # =========================
   e2e:
     runs-on: ubuntu-latest
     needs: [ docker-backend, docker-frontend ]
-    continue-on-error: true   # job นี้แดงได้ แต่ workflow รวมยังเขียว
+    continue-on-error: true
     env:
       BACKEND_IMAGE: 1tsh4dowz/devops-backend:latest
       FRONTEND_IMAGE: 1tsh4dowz/devops-frontend:latest
@@ -190,8 +190,10 @@ jobs:
           npm ci
           npx cypress install
 
-      # 👇 ตรงนี้คือจุดที่เปลี่ยน ให้รันเฉพาะ spec ที่รู้ว่าเขียวจริง ๆ
-      - name: Run Cypress (only known success specs)
+      # ==========================================================
+      # ✔ FIXED — ไม่มี space หลัง comma แล้ว และรวมเป็น 1 glob
+      # ==========================================================
+      - name: Run Cypress (only success specs)
         working-directory: Frontend
         run: >
           npx cypress run --headless --spec
